add streamlit app

--- a/principal.html
+++ b/principal.html
@@ -13,6 +13,8 @@
 
     <H2 id="txtProducto"></H2>
 
-    <iframe src="./to-iframe.html"></iframe>
+
+    <iframe src="./to-iframe.html" style="display: block; width: 100%; border: none;"></iframe>
+    <iframe src="http://localhost:8501/" style="display: block; width: 100%; height: 50vh; border: none;"></iframe>
 </body>
 </html>
